--- a/gallery.html
+++ b/gallery.html
@@ -32,7 +32,6 @@
   <!-- twoje style -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/lightbox.min.css">
-  <script type="text/javascript" src="js/lightbox-plus-jquery.min.js"></script>
 
 
 </head>
@@ -54,6 +53,7 @@
     e.src = "http://browser-update.org/update.min.js";
     document.body.appendChild(e);
   }
+
   try {
     document.addEventListener("DOMContentLoaded", $buo_f, false)
   }
@@ -127,65 +127,23 @@
   <h1 class="p-5">Galeria Collegium Gostomianum</h1>
 </div>
 
-<div class="container-fluid">
+<div class="container-fluid mx-4 p-5">
 
   <div class="container text-center">
     <h2 class="mb-5">← 2018 →</h2>
   </div>
 
-  <div class="row text-center mb-3">
-    <div class="col-md-3">
+  <div class="d-flex flex-row justify-content-center flex-wrap">
+    <div class="p-3">
       <a href="img/cg1.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg1.jpg" width="425"
                                                            height="250"></a>
     </div>
-    <div class="col-md-3">
+    <div class="p-3">
       <a href="img/cg2.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg2.jpg" width="425"
                                                            height="250"></a>
     </div>
-    <div class="col-md-3">
+    <div class="p-3">
       <a href="img/cg3.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg3.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-    <div class="col-md-3">
-      <a href="img/cg6.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg6.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-  </div>
-
-  <div class="row text-center mb-3">
-    <div class="col-md-3">
-      <a href="img/cg1.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg1.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-    <div class="col-md-3">
-      <a href="img/cg2.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg2.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-    <div class="col-md-3">
-      <a href="img/cg4.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg4.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-    <div class="col-md-3">
-      <a href="img/cg5.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg5.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-  </div>
-
-  <div class="row text-center mb-3">
-    <div class="col-md-3">
-      <a href="img/cg1.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg1.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-    <div class="col-md-3">
-      <a href="img/cg2.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg2.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-    <div class="col-md-3">
-      <a href="img/cg3.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg3.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-    <div class="col-md-3">
-      <a href="img/cg6.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg6.jpg" width="425"
                                                            height="250"></a>
     </div>
   </div>
@@ -194,40 +152,17 @@
     <h2 class="mb-5">← 2017 →</h2>
   </div>
 
-  <div class="row text-center mb-3">
-    <div class="col-md-3">
-      <a href="img/cg1.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg1.jpg" width="425"
+  <div class="d-flex flex-row justify-content-center flex-wrap">
+    <div class="p-3">
+      <a href="img/cg1.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg4.jpg" width="425"
                                                            height="250"></a>
     </div>
-    <div class="col-md-3">
-      <a href="img/cg2.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg2.jpg" width="425"
+    <div class="p-3">
+      <a href="img/cg2.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg5.jpg" width="425"
                                                            height="250"></a>
     </div>
-    <div class="col-md-3">
-      <a href="img/cg4.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg4.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-    <div class="col-md-3">
-      <a href="img/cg5.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg5.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-  </div>
-
-  <div class="row text-center mb-3">
-    <div class="col-md-3">
-      <a href="img/cg1.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg1.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-    <div class="col-md-3">
-      <a href="img/cg2.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg2.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-    <div class="col-md-3">
-      <a href="img/cg3.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg3.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-    <div class="col-md-3">
-      <a href="img/cg6.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg6.jpg" width="425"
+    <div class="p-3">
+      <a href="img/cg3.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg6.jpg" width="425"
                                                            height="250"></a>
     </div>
   </div>
@@ -236,21 +171,17 @@
     <h2 class="mb-5">← 2016 →</h2>
   </div>
 
-  <div class="row text-center mb-3">
-    <div class="col-md-3">
+  <div class="d-flex flex-row justify-content-center flex-wrap">
+    <div class="p-3">
       <a href="img/cg1.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg1.jpg" width="425"
                                                            height="250"></a>
     </div>
-    <div class="col-md-3">
+    <div class="p-3">
       <a href="img/cg2.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg2.jpg" width="425"
                                                            height="250"></a>
     </div>
-    <div class="col-md-3">
+    <div class="p-3">
       <a href="img/cg3.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg3.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-    <div class="col-md-3">
-      <a href="img/cg6.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg6.jpg" width="425"
                                                            height="250"></a>
     </div>
   </div>
@@ -321,7 +252,7 @@
 <script src="js/jquery-3.3.1.min.js"></script>
 <!-- Bootstrap JavaScript and Popper JS (https://popper.js.org) -->
 <script src="js/bootstrap.bundle.min.js"></script>
-
+<script type="text/javascript" src="js/lightbox-plus-jquery.min.js"></script>
 
 </body>
 </html>
